add policies ns

--- a/values-hub.yaml
+++ b/values-hub.yaml
@@ -8,6 +8,7 @@ clusterGroup:
     - golang-external-secrets
     - config-demo
     - hello-world
+    - policies
     - openshift-storage
 
   subscriptions:
